# INIAD2025

./: .gitattributes  .gitmodules  README.md
spring/: .gitignore  mise.toml  pyproject.toml
spring/OS/01-intro/: 5ans.txt  asgn3.c  asgn4.c  asgn5.c  asin.sh
spring/OS/02-shell/: 01-filecopy.c  02-cputime.c  mycopyed
spring/OS/03-asm/: add.s  asgn1.c  asgn1.s  password.s  sigma.s
spring/OS/04_io_exp/: add.s  addtest.c  mr  mytail.c  set.c  set.h  set.h.gch  setrun.c  test.c
spring/OS/05_filesys/: dst  filecopy1.c  filecopy2.c
spring/OS/06_prosess/: myshell.c
spring/OS/07_thread/: bbuf.c  ls.c  stack.c  stack_mtx.c
spring/OS/08_deadlock/: philosopher.c  philosopher_circlur.c  philosopher_cond.c  philosopher_trylock.c
spring/OS/11_mmap/: mytail2.c
spring/OS/12_security/: client.c
spring/T-car/: memo.txt
spring/T-car/00-introC/: asgn1-2-1.c  asgn1-2-2.c  asgn1-3-1.c  asgn1-3-2.c  asgn1-3-3.c  asgn1-4.c  asgn1.c
spring/T-car/01-tcarnel/: atnd.c
spring/TeamProject/: a.ipynb  memo.txt
spring/TeamProject/myslides/: .gitignore  package.json  pnpm-lock.yaml  slide-bottom.vue  slides.md  style.css
spring/TeamProject/slide-survey/: .gitignore
spring/TeamProject/授業資料md/: この実習のプロジェクトを研究面から考えよう.md  (+1 more)
winter/: .gitattributes  .gitignore  README.md  mise.toml  pixi.toml  pyproject.toml
winter/datasienceICT/: pixi.toml
winter/pre_soturon/: AGENTS.md  README.md  TODO.md
winter/物理A/: 01q.ipynb  02q.ipynb  03q.ipynb  04q.ipynb  05q.ipynb  06q.ipynb  07q.ipynb
winter/物理B/: 01q.ipynb  02q.ipynb  03q.ipynb  04q.ipynb  05q.ipynb  06q.ipynb  07q.ipynb
(+618 files in other folders)
