[project]
name = "iniad2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "japanize-matplotlib>=1.1.3",
    "japanmap>=0.6.0",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "polars[pandas,pyarrow]>=1.29.0",
]
