[project]
name = "datasienceict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.18.0",
    "greykite",
    "jupyterlab>=4.3.8",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=1.2.5",
    "polars[pyarrow]>=1.8.2",
    "rustworkx>=0.15.1",
    "scikit-learn>=1.3.1",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
]


[tool.ruff.lint]
ignore = ["F4", "E4"]
